--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
     <title>Clube do Livro</title>
   </head>
   <body>
-    <h1>TESTE</h1>
-    <h2>TESTE</h2>
+    <div class="container">
+      <nav>
+        <figure>
+          <img src="/assets/logo-symbol.svg" alt="" />
+        </figure>
+        <a href="" class="button">Assinar</a>
+
+        <section>
+            <h1>Desperte a sua imaginação e explore novos mundos</h1>
+            <p>
+                Junte-se ao clube de assinatura Encantos Literários e descubra maravilhas e aventuras a cada página    
+            </p>
+        </section>
+      </nav>
+    </div>
   </body>
 </html>
