fixing: layout css nav

--- a/index.html
+++ b/index.html
@@ -6,26 +6,50 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style/style.css" />
     <title>Clube do Livro</title>
   </head>
   <body>
     <div class="container">
-      <nav>
-        <figure>
-          <img src="/assets/logo-symbol.svg" alt="" />
-        </figure>
-        <a href="" class="button">Assinar</a>
-
+      <nav class="padding-default">
         <section>
-            <h1>Desperte a sua imaginação e explore novos mundos</h1>
+          <figure>
+            <img src="/assets/logo-symbol.svg" alt="" />
+          </figure>
+          <a href="" class="button">Assinar</a>
+        </section>
+    
+          <h1>Desperte a sua imaginação e explore novos mundos</h1>
+          <p>
+            Junte-se ao clube de assinatura Encantos Literários e descubra
+            maravilhas e aventuras a cada página
+          </p>
+        </section>
+          <div>
             <p>
-                Junte-se ao clube de assinatura Encantos Literários e descubra maravilhas e aventuras a cada página    
+              Receba todo mês um livro surpresa do seu tema favorito,
+              acompanhado de brindes exclusivos que tornarão a sua experiência
+              literária ainda mais encantadora.
             </p>
+          </div>
+
+          <figure>
+            <img src="/assets/image/mystery-opened-spellbook.png" alt="" />
+          </figure>
+
+          <figure>
+            <img src="/assets/image/mystery-ouija-planchette.png" alt="" />
+          </figure>
+
+          <figure>
+            <img src="/assets/image/mystery-crystal-ball.png\" alt="" />
+          </figure>
         </section>
       </nav>
     </div>
