--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <figure>
             <img src="/assets/logo-symbol.svg" alt="" />
           </figure>
-          <a href="" class="button">Assinar</a>
+          <a href="" class="button button-sm">Assinar</a>
         </section>
-    
+         <section> 
           <h1>Desperte a sua imaginação e explore novos mundos</h1>
           <p>
             Junte-se ao clube de assinatura Encantos Literários e descubra
