create new section books

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
           </figure>
           <a href="" class="button button-sm">Assinar</a>
         </section>
-         <section> 
+        <section>
           <h1>Desperte a sua imaginação e explore novos mundos</h1>
           <p>
             Junte-se ao clube de assinatura Encantos Literários e descubra
             maravilhas e aventuras a cada página
           </p>
         </section>
-          <div>
-            <p>
-              Receba todo mês um livro surpresa do seu tema favorito,
-              acompanhado de brindes exclusivos que tornarão a sua experiência
-              literária ainda mais encantadora.
-            </p>
-          </div>
+
+        <section>
+          <p>
+            Receba todo mês um livro surpresa do seu tema favorito, acompanhado
+            de brindes exclusivos que tornarão a sua experiência literária ainda
+            mais encantadora.
+          </p>
 
           <figure>
             <img src="/assets/image/mystery-opened-spellbook.png" alt="" />
@@ -48,10 +48,26 @@
           </figure>
 
           <figure>
-            <img src="/assets/image/mystery-crystal-ball.png\" alt="" />
+            <img src="/assets/image/mystery-crystal-ball.png" alt="" />
           </figure>
         </section>
       </nav>
+      <main>
+        <section>
+        <img src="/assets/star.svg" alt="">
+        <h1>Conheca o kit mensal</h1>
+        <img src="/assets/star.svg" alt="">
+        <p>
+          Recebe uma caixa surpresa todos os meses
+        </p>
+        </section>
+        <figure>
+          <img src="/assets/image/book.png" alt="">
+        </figure>
+        <section>
+
+        </section>
+      </main>
     </div>
   </body>
 </html>
