style: create main books section

--- a/index.html
+++ b/index.html
@@ -52,19 +52,28 @@
           </figure>
         </section>
       </nav>
+
       <main>
         <section>
-        <img src="/assets/star.svg" alt="">
+        <div class="padding-default">
+          <span><img src="/assets/star.svg" alt=""></span>
         <h1>Conheca o kit mensal</h1>
-        <img src="/assets/star.svg" alt="">
+        <span><img src="/assets/star.svg" alt=""></span>
+        </div>
+        <div class="padding-default">
         <p>
           Recebe uma caixa surpresa todos os meses
         </p>
+        </div>
+        
+      
         </section>
+
+        <section>
         <figure>
           <img src="/assets/image/book.png" alt="">
         </figure>
-        <section>
+        </section>
 
         </section>
       </main>
