style: bookmark transform rotate

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         <section>
         <figure>
           <img src="/assets/image/book.png" alt="">
+          <img src="assets/image/bookmark-yellow.png" alt="">
+          <img src="assets/image/bookmark-purple.png" alt="">
+        </figure>
+        <figure>
+          
         </figure>
         </section>
 
