--- a/index.html
+++ b/index.html
@@ -67,13 +67,28 @@
 
         <section>
           <figure>
+             <span>livro em capa dura</span>
+             <span>Broche exclusivo</span>
             <img src="assets/image/pin.png" alt="" />
             <img src="/assets/image/book.png" alt="" />
             <img src="assets/image/bookmark-yellow.png" alt="" />
             <img src="assets/image/bookmark-purple.png" alt="" />
+            <span>Marca Paginas tematico</span>
           </figure>
         </section>
       </main>
+
+      <section class="padding-default">
+        <div>
+          <h1>Assintatura Encatos Literarios</h1>
+        </div>
+          <div class="cards">
+              
+          </div>
+        <div>
+
+        </div>
+      </section>
     </div>
   </body>
 </html>
