radial blur gradient

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <section class="padding-default">
         <div>
-          <h1>Assintatura Encatos Literarios</h1>
+          <h1>Assintatura Encantos Literarios</h1>
         </div>
           <div class="cards">
               
